# morpheus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  plan.md
cmake/: FrozenInfo.plist.in  MorpheusInfo.plist.in  export-manifest.json.in
docs/: agent-provider-protocol.md  math-sdk.md  self-hosting.md  standalone-export.md
docs/icons/morpheus.icon/: icon.json
include/morpheus/: app_api.h  authoring.h  authoring_app.h  database.h  leakcheck.h  runtime.h  sdk.h
patches/: tinycc-map-jit.patch
src/agent/: agent_session.c  agent_session.h
src/authoring/: authoring_capabilities.c  authoring_capabilities.h  authoring_controller.c  authoring_controller.h  authoring_shell.c  authoring_shell.h  export_service.c  export_service.h  morpheus_app.c
src/compiler/: runtime_leakcheck.c  runtime_leakcheck.h  runtime_module.c  runtime_module.h
src/export/: main.m
src/host/: database_service.c  database_service.h  http_service.c  http_service.h  http_service.m  image_service.h  image_service.m  json_service.c  la_host.h  la_impl.c  main.m  math_host.h  morpheus_frame_scheduler.h  morpheus_nuklear_frame_cache.h  morpheus_nuklear_metal.h  morpheus_nuklear_quartz.h  morpheus_nuklear_renderer.h  numeric.c  numeric.h  stb_image_impl.c  theme.h
src/project/: project_store.c  project_store.h  revision_store.c  revision_store.h
src/runtime/: standalone_runtime.m
tests/: agent_boundary_test.c  agent_repair_loop_test.c  agent_session_test.c  authoring_app_module_test.c  authoring_controller_test.c  authoring_export_capability_test.c  authoring_projects_capability_test.c  authoring_revisions_capability_test.c  authoring_shell_test.c  capability_registry_test.c  database_service_test.c  frame_scheduler_test.c  frozen_isolation_test.sh  http_service_test.c  image_service_quartz_test.m  image_service_test.m  la_tinycc_test.c  math_host_test.c  miniz_test.c  nuklear_frame_cache_test.c  nuklear_large_draw_test.c  nuklear_quartz_test.m  ollama_adapter_test.sh  project_store_test.c  revision_store_test.c  runtime_leakcheck_test.c  runtime_reload_test.c  runtime_validation_test.c  sqlite_test.c  stb_image_test.c  yyjson_test.c
tests/fixtures/: fake_agent_provider.c  fake_boundary_agent_provider.c  fake_ollama_curl  fake_repair_agent_provider.c  http_response.json  module_compile_error.c  module_database.c  module_forbidden_stdlib.c  module_init_failure.c  module_invalid.c  module_json.c  module_migration_failure.c  module_nuklear.c  module_stdlib.c  module_v1.c  module_v2.c
tools/: morpheus-codex-agent  morpheus-export  morpheus-ollama-agent  morpheus-ollama-system-prompt.txt
